--- a/README
+++ b/README
@@ -1,11 +1,11 @@
 ## Discription
-
+This is my portfolio I have create. It has multiple links to some of my portfolio items and links to contact me. There is also an about me page that tells a little about me. The portfolio utilizes both html and css.
 
 
 
 
 ## Screenshot
-
+![Screenshot](./img/Screenshot%202022-06-22%20172216.png)
 
 
 
