made adjustments to media query

--- a/README
+++ b/README
@@ -4,10 +4,10 @@ This is my portfolio I have create. It has multiple links to some of my portfoli
 
 
 
-## Screenshot
-[Screenshot](./img/Screenshot%202022-06-22%20172216.PNG)
+## Screenshot of my portfolio
+[Screenshot] ./img/Screenshot%202022-06-22%20172216.png/
 
 
 
-## Link
+## Link to my application
 ![Link] https://github.com/Steven-Lang99/portfolio
