adjusted media query

--- a/README
+++ b/README
@@ -5,7 +5,7 @@ This is my portfolio I have create. It has multiple links to some of my portfoli
 
 
 ## Screenshot of my portfolio
-[Screenshot] ./img/Screenshot%202022-06-22%20172216.png/
+![Screenshot](./img/Screenshot%202022-06-22%20172216.png)
 
 
 
