--- a/README
+++ b/README
@@ -5,9 +5,11 @@ This is my portfolio I have create. It has multiple links to some of my portfoli
 
 
 ## Screenshot of my portfolio
-![Screenshot](./img/Screenshot%202022-06-22%20172216.png)
+
+![Screenshot](./img/Screenshot.png)
 
 
 
 ## Link to my application
+
 ![Link] https://github.com/Steven-Lang99/portfolio
