adjusting html image

--- a/README
+++ b/README
@@ -7,7 +7,7 @@ This is my portfolio I have create. It has multiple links to some of my portfoli
 ## Screenshot of my portfolio
 
 
-![Screenshot](/img/Screenshot.png)
+![Screenshot](./img/Screenshot.png)
 
 
 
